[gd_scene load_steps=5 format=3 uid="uid://c8j8u4v6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_script"]
[ext_resource type="Theme" path="res://themes/modern_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" path="res://assets/images/main_menu_background.png" id="3_texture"]
[ext_resource type="Shader" path="res://shaders/backdrop_blur.gdshader" id="4_shader"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6
texture = ExtResource("3_texture")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.7)
material = ExtResource("4_shader")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Chrono Civ: Idle Ascension"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 120.0
offset_right = 300.0
offset_bottom = 124.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 200.0
offset_right = 350.0
offset_bottom = -50.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
flat = true
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
flat = true
text = "Load Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
flat = true
text = "Settings"

[node name="AchievementsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
flat = true
text = "Achievements"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
flat = true
text = "Quit" 